Fix gitignore, Makefile and add patchfile to config.h for emcc

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,19 @@ util/libutil.a
 /doc/gnupg.info
 /doc/gnupg.info-1
 /doc/gnupg.info-2
+doc/yat2m
+doc/yat2m-stamp.tmp
+mpi/mpih-add1.c
+mpi/mpih-lshift.c
+mpi/mpih-mul1.c
+mpi/mpih-mul2.c
+mpi/mpih-mul3.c
+mpi/mpih-rshift.c
+mpi/mpih-sub1.c
+tools/clean-sat
+tools/gpgsplit
+tools/make-dns-cert
+tools/mk-tdata
+zconf.h
+zlib.h
+zlib/libzlib.a
